--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -12,7 +12,10 @@
 <body class="bg-dark text-white">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Your Logo Here</a>
+            <a class="navbar-brand" href="#">
+                <a href="https://pese.ch/"><img style="height: 75px;" src='/static/img/logo/Logo E-bou by Abel.png' alt="PESE Logo"></a>
+                <!-- TODO fix url-->
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,7 +48,8 @@
                     Organisé par
                     
                 </div>
-                <a href="https://pese.ch/"><img class="w-50" src='' alt="PESE Logo"></a>
+                <!-- TODO pese logo-->
+                <a href="https://pese.ch/"><img class="w-50" src='/static/img/logo/logo-SSU-court_old.png' alt="PESE Logo"></a>
             </div>
 
             <div class="col-sm-3 text-center align-self-top">
@@ -53,8 +57,9 @@
                     Avec le soutien de
                     
                 </div>
-                <a href="https://www.epfl.ch/"><img class="w-50" src='' alt="EPFL Logo"></a>
-                <a href="https://www.unil.ch/central/home.html"><img class="w-50" src='' alt="UNIL Logo"> </a>
+                <a href="https://www.epfl.ch/"><img class="w-50" src='/static/img/logo/epfl_logo.png' alt="EPFL Logo"></a>
+                <a href="https://www.unil.ch/central/home.html"><img class="w-50" src='/static/img/logo/logo-unil-blanc.png' alt="UNIL Logo"> </a>
+                
             </div>
 
             <div class="col-sm-3 text-center align-self-top">
