--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -8,21 +8,22 @@
     <title>{% block title %}My Site{% endblock %}</title>
 
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
     <!-- Ensure your project includes Bootstrap's dark theme CSS or use Bootstrap classes designed for dark themes -->
 </head>
-<body class="bg-dark text-white">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <a href="https://pese.ch/"><img class="p-2" style="height: 75px;" src='/static/img/logo/Logo E-bou by Abel.png' alt="PESE Logo"></a>
-                <!-- TODO fix url-->
-            </a>
+<body class="bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <div class="container-fluid ">
+          
+            <a class="navbar-brand" href="https://pese.ch/"><img class="p-2" style="height: 75px;" src='/static/img/logo/Logo E-bou by Abel.png' alt="PESE Logo"></a>
+            <!-- TODO fix url-->
+         
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
+            <div class="collapse navbar-collapse  " id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto ">
                     <a class="nav-link" aria-current="page" href="#">Ebou CUP IV</a>
                     <a class="nav-link" href="#">WEEKLY</a>
                     <a class="nav-link" href="#">PICS</a>
